Fix #21908: Add Persona configuration per User (#21909)
* Fix #21908: Add Persona configuration per User

* Add default persona, add tests for User defaultPersona

* Add default persona, add tests for User defaultPersona

* Fix tests